dropdowns with bootstrap

--- a/AThirdCarDealership.csproj
+++ b/AThirdCarDealership.csproj
@@ -24,11 +24,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\app\components\shared\pagination.component.ts" />
     <None Remove="ClientApp\app\Services\VehicleService.ts" />
   </ItemGroup>
 
   <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\app\components\shared\pagination.component.ts" />
     <TypeScriptCompile Include="ClientApp\app\Services\VehicleService.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ClientApp\app\models\" />
   </ItemGroup>
 
   <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
