--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,13 @@
 {
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AthirdCarDEalerShip;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AthirdCarDealerShip;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+
+  "PhotoSettings": {
+
+    "MaxBytes": 104585760,
+    "AcceptedFileTypes":  [".jpg", ".png", ".jpeg"]
   },
   "Logging": {
     "IncludeScopes": false,
