--- a/AThirdCarDealership.csproj
+++ b/AThirdCarDealership.csproj
@@ -10,7 +10,10 @@
     <DotNetCliToolReference Include="Microsoft.DotNet.Watcher.Tools" Version="2.0.0" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="6.2.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -20,6 +23,21 @@
   <ItemGroup>
     <!-- Files not to publish (note that the 'dist' subfolders are re-added below) -->
     <Content Remove="ClientApp\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="ClientApp\app\components\shared\pagination.component.ts" />
+    <None Remove="ClientApp\app\models\vehicle.ts" />
+    <None Remove="ClientApp\app\Services\PhotoService.ts" />
+    <None Remove="ClientApp\app\Services\VehicleService.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\app\components\shared\pagination.component.ts" />
+    <TypeScriptCompile Include="ClientApp\app\components\view-vehicle\view-vehicle.component.ts" />
+    <TypeScriptCompile Include="ClientApp\app\models\vehicle.ts" />
+    <TypeScriptCompile Include="ClientApp\app\Services\PhotoService.ts" />
+    <TypeScriptCompile Include="ClientApp\app\Services\VehicleService.ts" />
   </ItemGroup>
 
   <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
