--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-server": "4.2.5",
     "@angular/router": "4.2.5",
     "@ngtools/webpack": "1.5.0",
+    "@types/underscore": "^1.8.5",
     "@types/webpack-env": "1.13.0",
     "angular2-template-loader": "0.6.2",
     "aspnet-prerendering": "^3.0.1",
@@ -31,17 +32,21 @@
     "expose-loader": "0.7.3",
     "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "0.11.2",
+    "font-awesome": "^4.7.0",
     "html-loader": "0.4.5",
     "isomorphic-fetch": "2.2.1",
     "jquery": "3.2.1",
     "json-loader": "0.5.4",
+    "ng2-toasty": "^2.5.0",
     "preboot": "4.5.2",
+    "raven-js": "^3.20.1",
     "raw-loader": "0.5.1",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.4.2",
     "style-loader": "0.18.2",
     "to-string-loader": "1.1.5",
     "typescript": "2.4.1",
+    "underscore": "^1.8.3",
     "url-loader": "0.5.9",
     "webpack": "2.5.1",
     "webpack-hot-middleware": "2.18.2",
@@ -49,6 +54,7 @@
     "zone.js": "0.8.12"
   },
   "devDependencies": {
+    "@angular/cli": "^1.5.5",
     "@types/chai": "4.0.1",
     "@types/jasmine": "2.5.53",
     "chai": "4.0.2",
