--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "es2015",
+    "module": "es6",
     "moduleResolution": "node",
     "target": "es5",
     "sourceMap": true,
@@ -9,6 +9,8 @@
     "skipDefaultLibCheck": true,
     "skipLibCheck": true, // Workaround for https://github.com/angular/angular/issues/17863. Remove this if you upgrade to a fixed version of Angular.
     "strict": true,
+    "noImplicitAny": false,
+ 
     "lib": [ "es6", "dom" ],
     "types": [ "webpack-env" ]
   },
